# opengl-ex

./: CMakeLists.txt  README.md  glad.c  main.cpp
